test/log/reduction/vardotacc_vv_u16.txt
vardotacc_vv_u16.c:9:2: warning: multi-line comment [-Wcomment]
    9 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vardotacc_vv_u16.c:11:44: warning: backslash and newline separated by space
   11 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vardotacc_vv_u16.c:30:6: warning: no previous prototype for 'vardotacc_vv_u16_golden' [-Wmissing-prototypes]
   30 | void vardotacc_vv_u16_golden(uint32_t *a,int16_t *b,int16_t *c,uint32_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~~~~~
vardotacc_vv_u16.c: In function 'vardotacc_vv_u16_golden':
vardotacc_vv_u16.c:31:1: error: unknown type name 'Operator'
   31 | Operator Line --- TODO
      | ^~~~~~~~
vardotacc_vv_u16.c:31:15: error: expected '=', ',', ';', 'asm' or '__attribute__' before '--' token
   31 | Operator Line --- TODO
      |               ^~
vardotacc_vv_u16.c:35:5: warning: 'main' is normally a non-static function [-Wmain]
   35 | int main(void) {
      |     ^~~~
vardotacc_vv_u16.c: In function 'main':
vardotacc_vv_u16.c:37:17: warning: declaration of 'a' shadows a parameter [-Wshadow]
   37 |     uint32x16_t a;
      |                 ^
vardotacc_vv_u16.c:30:40: note: shadowed declaration is here
   30 | void vardotacc_vv_u16_golden(uint32_t *a,int16_t *b,int16_t *c,uint32_t *exp_result) {
      |                              ~~~~~~~~~~^
vardotacc_vv_u16.c:38:16: warning: declaration of 'b' shadows a parameter [-Wshadow]
   38 |     int16x32_t b;
      |                ^
vardotacc_vv_u16.c:30:51: note: shadowed declaration is here
   30 | void vardotacc_vv_u16_golden(uint32_t *a,int16_t *b,int16_t *c,uint32_t *exp_result) {
      |                                          ~~~~~~~~~^
vardotacc_vv_u16.c:39:16: warning: declaration of 'c' shadows a parameter [-Wshadow]
   39 |     int16x32_t c;
      |                ^
vardotacc_vv_u16.c:30:62: note: shadowed declaration is here
   30 | void vardotacc_vv_u16_golden(uint32_t *a,int16_t *b,int16_t *c,uint32_t *exp_result) {
      |                                                     ~~~~~~~~~^
vardotacc_vv_u16.c:45:14: warning: declaration of 'exp_result' shadows a parameter [-Wshadow]
   45 |     uint32_t exp_result[16] = {0};
      |              ^~~~~~~~~~
vardotacc_vv_u16.c:30:74: note: shadowed declaration is here
   30 | void vardotacc_vv_u16_golden(uint32_t *a,int16_t *b,int16_t *c,uint32_t *exp_result) {
      |                                                                ~~~~~~~~~~^~~~~~~~~~
vardotacc_vv_u16.c:55:5: note: use '-flax-vector-conversions' to permit conversions between vectors with differing element types or numbers of subparts
   55 |     result = vardotacc_vv_u16(a,b,c);
      |     ^~~~~~
vardotacc_vv_u16.c:55:33: error: incompatible type for argument 2 of 'vardotacc_vv_u16'
   55 |     result = vardotacc_vv_u16(a,b,c);
      |                                 ^
      |                                 |
      |                                 int16x32_t
In file included from vardotacc_vv_u16.c:4:
/opt/analog/riscv/1.0.1/Riscv/software/host/bin/gcc/lib/gcc/riscv32-rivai-elf/10.2.1/include/rivai_rugrats.h:1934:1: note: expected 'uint16x32_t' but argument is of type 'int16x32_t'
 1934 | __RUGRATS_DOTACC_VV_OP (ardotacc, u, uint, 32, 16, 16, 32)
      | ^~~~~~~~~~~~~~~~~~~~~~
vardotacc_vv_u16.c:55:35: error: incompatible type for argument 3 of 'vardotacc_vv_u16'
   55 |     result = vardotacc_vv_u16(a,b,c);
      |                                   ^
      |                                   |
      |                                   int16x32_t
In file included from vardotacc_vv_u16.c:4:
/opt/analog/riscv/1.0.1/Riscv/software/host/bin/gcc/lib/gcc/riscv32-rivai-elf/10.2.1/include/rivai_rugrats.h:1934:1: note: expected 'uint16x32_t' but argument is of type 'int16x32_t'
 1934 | __RUGRATS_DOTACC_VV_OP (ardotacc, u, uint, 32, 16, 16, 32)
      | ^~~~~~~~~~~~~~~~~~~~~~
vardotacc_vv_u16.c:60:64: warning: format '%x' expects argument of type 'unsigned int', but argument 5 has type 'uint32_t' {aka 'long unsigned int'} [-Wformat=]
   60 |             printf("Failed: result[%d] = %x, exp_result[%d] = %x\n", i, result[i], i, exp_result[i]);
      |                                                               ~^                      ~~~~~~~~~~~~~
      |                                                                |                                |
      |                                                                unsigned int                     uint32_t {aka long unsigned int}
      |                                                               %lx
vardotacc_vv_u16.c: In function 'vardotacc_vv_u16_golden':
vardotacc_vv_u16.c:75:1: error: expected declaration or statement at end of input
   75 | }
      | ^
vardotacc_vv_u16.c:30:40: warning: unused parameter 'a' [-Wunused-parameter]
   30 | void vardotacc_vv_u16_golden(uint32_t *a,int16_t *b,int16_t *c,uint32_t *exp_result) {
      |                              ~~~~~~~~~~^
vardotacc_vv_u16.c:30:51: warning: unused parameter 'b' [-Wunused-parameter]
   30 | void vardotacc_vv_u16_golden(uint32_t *a,int16_t *b,int16_t *c,uint32_t *exp_result) {
      |                                          ~~~~~~~~~^
vardotacc_vv_u16.c:30:62: warning: unused parameter 'c' [-Wunused-parameter]
   30 | void vardotacc_vv_u16_golden(uint32_t *a,int16_t *b,int16_t *c,uint32_t *exp_result) {
      |                                                     ~~~~~~~~~^
vardotacc_vv_u16.c:30:74: warning: unused parameter 'exp_result' [-Wunused-parameter]
   30 | void vardotacc_vv_u16_golden(uint32_t *a,int16_t *b,int16_t *c,uint32_t *exp_result) {
      |                                                                ~~~~~~~~~~^~~~~~~~~~
At top level:
vardotacc_vv_u16.c:35:5: warning: 'main' defined but not used [-Wunused-function]
   35 | int main(void) {
      |     ^~~~
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vardotacc_vv_u16.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vardotacc_vv_u16"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vardotacc_vv_u16.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vardotacc_vv_u16.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed